--- a/MedShine/src/index.css
+++ b/MedShine/src/index.css
@@ -9,16 +9,20 @@ body{
   padding: 10px 100px 10px 100px;
   color:rgb(62, 78, 223);
   font-weight: bold;
+  position:sticky;
+  top:0;
+  background-color: white;
+  z-index: 1;
 }
 .mainHeader h2{
   font-size: 30px;
 }
 .logoSection{
-  width:150px;
+  width:200px;
 }
 .logoSection img{
   width:100%;
-  height:40px;
+  height:60px;
 }
 .navbar{
   display: flex;
