--- a/MedShine/src/index.css
+++ b/MedShine/src/index.css
@@ -6,9 +6,8 @@ body{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 100px 10px 100px;
-  color:rgb(62, 78, 223);
-  font-weight: bold;
+  padding: 0px 100px 0px 100px;
+  color:rgb(34, 101, 189);
   position:sticky;
   top:0;
   background-color: white;
@@ -22,7 +21,7 @@ body{
 }
 .logoSection img{
   width:100%;
-  height:60px;
+  height:70px;
 }
 .navbar{
   display: flex;
@@ -32,7 +31,15 @@ body{
 }
 .navbar a{
   text-decoration: none;
-  color: rgb(62, 78, 223);
+  color: rgb(36, 94, 161);
+    font-weight: bold;
+}
+.navbar .activeLink{
+
+  background-color: rgb(227, 239, 255);
+  border-radius: 20px;
+  padding: 0px 5px;;
+
 }
 .contactSection{
   display: flex;
@@ -51,6 +58,7 @@ body{
 .homeLeft{
   width:60%;
   padding:20px;
+  animation: slideRight 1s ease 0s 1 normal forwards;
 
 }
 .homeRight{
@@ -65,6 +73,7 @@ body{
   object-fit: cover;
   object-position: 50% 55%;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  animation: slideLeft 1s ease 0s 1 normal forwards;
 }
 .sectionTwo{
   display: grid;
@@ -107,6 +116,7 @@ body{
   width: 60%;
   background-color: ;
   padding: 20px;
+  animation: slideLeft 1s ease 0s 1 normal forwards;
 }
 
 
@@ -124,6 +134,7 @@ body{
   object-fit: cover;
   object-position: 52% 50%;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  animation: slideRight 1s ease 0s 1 normal forwards;
 }
 .feature2{
 display: flex;
@@ -197,13 +208,15 @@ margin: 20px;
   width: 60%;
   background-color: ;
   padding: 20px;
+  animation: slideRight 1s ease 0s 1 normal forwards;
 }
 
 
 .sectionFiveRight {
   width: 40%;
   background-color: ;
-  padding: 20px
+  padding: 20px;
+  animation: slideLeft 1s ease 0s 1 normal forwards;
 }
 
 .sectionFiveRight img {
@@ -237,4 +250,30 @@ margin: 20px;
 }
 .doctorsname{
   font-size: 20px;
+}
+
+
+
+@keyframes slideLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(250px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideRight {
+  0% {
+    opacity: 0;
+    transform: translateX(-250px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
