--- a/MediShine/src/Components/BubbleSwitch.module.css
+++ b/MediShine/src/Components/BubbleSwitch.module.css
@@ -36,3 +36,13 @@
     padding-left: 25px;
     padding-right: 0;
 }
+
+@media only screen and (max-width: 769px) {
+
+}
+
+@media only screen and (max-width: 426px) {
+    .checkboxwrapper{
+        display: none;
+    }
+}
