--- a/MediShine/src/index.css
+++ b/MediShine/src/index.css
@@ -35,13 +35,29 @@ body{
 .navbar a{
   text-decoration: none;
   color: rgb(36, 94, 161);
-    font-weight: bold;
+  font-weight: bold;
+  transition: all 0.5s ease;
 }
 .navbar .activeLink{
-
   background-color: rgb(227, 239, 255);
   border-radius: 20px;
-  padding: 0px 5px;;
+  padding: 0px 5px;
+  transition: all 0.5s ease;
+}
+.hamburger{
+  display: none;
+}
+.navbar2 a {
+  text-decoration: none;
+  color: rgb(36, 94, 161);
+  font-weight: bold;
+}
+
+.navbar2 .activeLink {
+  background-color: rgb(227, 239, 255);
+  border-radius: 20px;
+  padding: 0px 5px;
+  ;
 
 }
 .contactSection{
@@ -90,7 +106,7 @@ body{
   transition: all 0.5s;
 }
 .homeFeature:hover{
-  transform: scale(1.1);
+  transform: scale(1.03);
   transition: all 0.5s;
 }
 .titleAndImage{
@@ -263,7 +279,7 @@ display: none;
 @media only screen and (max-width: 769px) {
   .mainHeader {
       flex-direction: column;
-      justify-items: center;
+      align-items: center;
       gap:10px;
     }
   .home h1{
@@ -322,13 +338,55 @@ display: none;
 }
 
 @media only screen and (max-width: 426px) {
-  .navbar{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
+  .mainHeader {
+    flex-direction: row;
+    justify-content: space-between; 
+    gap:0px;
+    padding: 0;
+    align-items: center;
+    background-color: ;
+  }
+
+  .logoSection {
+    width: 200px;
+  }
+
+  .logoSection img {
+    width: 80%;
+    height: 60px;
+    background-color: ;
+  }
+  .navbar2{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     gap:10px;
+    padding: 30px;
+    margin: auto;
+    position: absolute;
+    right:5px;
+    background-color: rgb(249, 253, 255);
+    border-radius: 10px;
+    width: 40%;
+    height: 250px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    animation: slideLeft 1s ease 0s 1 normal forwards;
+  }
+  
+  .navbar{
     padding: 0;
     margin: 0;
-    gap: 0;
+    display: none;
+    width: 0px;
+  }
+  .hamburger{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .contactSection button{
+    display: none;
   }
   .contactUs{
     display: none;
@@ -407,10 +465,20 @@ display: none;
     font-size: 15px;
   }
   .doctorOrNot{
-    display: none;  
+    padding: 0;
+      margin: 0;
+      display: none;
+      width: 0px
   }
   .doctorOrNot label{
+    padding:0;
+    margin:0;
     display: none;
+    width:0px
+  }
+  .sectionOne {
+    padding:0px 10px 30px 10px;
+
   }
 }
 
